Rename measurement to telegraf_measurement
